// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-ydzcd8"
  >
    default Badge
  </div>
</div>
`;

exports[`Storyshots appearance stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-121kjrq"
  >
    stroke Badge
  </div>
</div>
`;

exports[`Storyshots color blue default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-1syrv3o"
  >
    blue default Badge
  </div>
</div>
`;

exports[`Storyshots color blue stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-664o4k"
  >
    blue stroke Badge
  </div>
</div>
`;

exports[`Storyshots color gray default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-ydzcd8"
  >
    gray default Badge
  </div>
</div>
`;

exports[`Storyshots color gray stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-121kjrq"
  >
    gray stroke Badge
  </div>
</div>
`;

exports[`Storyshots color green default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-1hdzczx"
  >
    green default Badge
  </div>
</div>
`;

exports[`Storyshots color green stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-1284cpa"
  >
    green stroke Badge
  </div>
</div>
`;

exports[`Storyshots color red default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-ef980q"
  >
    red default Badge
  </div>
</div>
`;

exports[`Storyshots color red stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-4hfe7d"
  >
    red stroke Badge
  </div>
</div>
`;

exports[`Storyshots color yellow default 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-1mliwxu"
  >
    yellow default Badge
  </div>
</div>
`;

exports[`Storyshots color yellow stroke 1`] = `
<div
  data-css-claeju=""
>
  <div
    className="css-index--badge-10dxf71"
  >
    yellow stroke Badge
  </div>
</div>
`;
